View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030392 | Open CASCADE | OCCT:Data Exchange | public | 2018-11-30 10:39 | 2021-10-07 12:19 |
Reporter | snn | Assigned To | snn | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Target Version | 7.7.0 | ||||
Summary | 0030392: Data Exchange - XCAFDoc_GraphNode doesn't copy backward links | ||||
Description | XCAFDoc_GraphNode::Paste procedure doesn't copy backward links from fathers and children XCAFDoc_GraphNode objects | ||||
Tags | No tags attached. | ||||
Test case number | |||||
Date Modified | Username | Field | Change |
---|---|---|---|
2018-11-30 10:39 | snn | New Issue | |
2018-11-30 10:39 | snn | Assigned To | => gka |
2019-09-02 16:26 | git | Note Added: 0086617 | |
2019-09-04 11:56 | kgv | Summary | XCAFDoc_GraphNode doesn't copy backward links => Data Exchange - XCAFDoc_GraphNode doesn't copy backward links |
2019-09-04 15:54 | abv | Target Version | 7.4.0 => 7.5.0 |
2019-09-17 09:39 | nds | Assigned To | gka => nds |
2019-09-20 13:18 | nds | Relationship added | related to 0030341 |
2020-09-11 17:54 | gka | Target Version | 7.5.0 => 7.6.0 |
2021-03-26 12:44 | nds | Assigned To | nds => snn |
2021-10-07 12:19 | szy | Target Version | 7.6.0 => 7.7.0 |