0030392: XCAFDoc_GraphNode doesn't copy backward links

(cherry picked from commit 6131065fae2474309c617039ad5be15f1f05a813)
(cherry picked from commit 713624228050b8f7db4d8b2e22c7edfd8c832471)
(cherry picked from commit b7fb7db6ae971efcf9ce0b5283a89328c4dce1bb)
(cherry picked from commit 68be9e7b9c5851087d57aeec9809012e4dc460b8)
(cherry picked from commit 6bc54a6b6fc335b802959d612f0ed4edbb5d5c33)
(cherry picked from commit ca5e48596204efa0b86bcbe6a60ce1bf612341a1)
(cherry picked from commit fcc93b4f342c14aed2ee39a4cfe14bbcb6e54ad4)